--- a/projects/mern/event-Application/eventapi/package.json
+++ b/projects/mern/event-Application/eventapi/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9"
   }
 }
