--- a/projects/mern/quotes-app/backend/.env
+++ b/projects/mern/quotes-app/backend/.env
@@ -1,3 +1,3 @@
 MONGO_URI='mongodb://localhost:27017/quotes'
-NODE_ENV='development'
+NODE_ENV='production'
 JWT_SECRET='ijifjfjoiffujuifjouifjfif694'
