--- a/projects/mern/quotes-app/backend/package.json
+++ b/projects/mern/quotes-app/backend/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^3.12.0",
     "apollo-server-core": "^3.12.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
